# StageItem.gd
# é—œå¡é …ç›® UI
extends PanelContainer

# ==================== å¼•ç”¨ç¯€é» ====================
@onready var stage_name_label: Label = $MarginContainer/VBoxContainer/StageNameLabel
@onready var description_label: Label = $MarginContainer/VBoxContainer/DescriptionLabel
@onready var difficulty_label: Label = $MarginContainer/VBoxContainer/InfoContainer/DifficultyLabel
@onready var status_label: Label = $MarginContainer/VBoxContainer/InfoContainer/StatusLabel
@onready var locked_overlay: ColorRect = $LockedOverlay
@onready var boss_badge: Label = $BossBadge

# ==================== ä¿¡è™Ÿ ====================
signal stage_selected(stage_data: StageData)

# ==================== å±¬æ€§ ====================
var stage_data: StageData = null

# ==================== åˆå§‹åŒ– ====================

func _ready():
	gui_input.connect(_on_gui_input)

# ==================== è¨­ç½®é—œå¡æ•¸æ“š ====================

func setup(data: StageData):
	"""è¨­ç½®é—œå¡æ•¸æ“šä¸¦æ›´æ–°é¡¯ç¤º"""
	stage_data = data

	# åŸºç¤è³‡è¨Š
	stage_name_label.text = data.stage_name
	description_label.text = data.stage_description

	# é›£åº¦
	difficulty_label.text = "é›£åº¦: " + "â˜…".repeat(data.difficulty)

	# BOSS æ¨™è¨˜
	boss_badge.visible = data.is_boss_stage

	# ç‹€æ…‹
	update_status()

func update_status():
	"""æ›´æ–°é—œå¡ç‹€æ…‹é¡¯ç¤º"""
	if not stage_data:
		return

	# 1. ç²å–ç©å®¶çš„é€šé—œç´€éŒ„ (ä¾‹å¦‚ ["1-1"])
	var completed_stages = PlayerDataManager.get_completed_stages()

	# 2. æª¢æŸ¥æ­¤é—œå¡æ˜¯å¦å·²è§£é– (ä¾‹å¦‚ 1-2 æª¢æŸ¥ "1-1" æ˜¯å¦åœ¨ completed_stages ä¸­)
	var is_unlocked = stage_data.is_unlocked(completed_stages)

	# 3. æª¢æŸ¥ã€Œæ­¤é—œå¡æœ¬èº«ã€æ˜¯å¦åœ¨é€šé—œç´€éŒ„ä¸­
	var is_completed = (stage_data.stage_id in completed_stages)

	# 4. æ ¹æ“šè§£é–å’Œå®Œæˆç‹€æ…‹æ›´æ–°UI
	if not is_unlocked:
		# æœªè§£é–
		status_label.text = "ğŸ”’ æœªè§£é–"
		status_label.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5))
		locked_overlay.visible = true
		mouse_filter = Control.MOUSE_FILTER_IGNORE
	elif is_completed:
		# å·²è§£é– ä¸” å·²å®Œæˆ (ä¾‹å¦‚ 1-1)
		status_label.text = "âœ… å·²å®Œæˆ"
		status_label.add_theme_color_override("font_color", Color(0.2, 0.8, 0.2))
		locked_overlay.visible = false
		mouse_filter = Control.MOUSE_FILTER_STOP
	else:
		# å·²è§£é– ä½† æœªå®Œæˆ (ä¾‹å¦‚ 1-2)
		status_label.text = "â–¶ å¯æŒ‘æˆ°"
		status_label.add_theme_color_override("font_color", Color(0.3, 0.7, 1.0))
		locked_overlay.visible = false
		mouse_filter = Control.MOUSE_FILTER_STOP

# ==================== è¼¸å…¥è™•ç† ====================

func _on_gui_input(event: InputEvent):
	"""è™•ç†é»æ“Šäº‹ä»¶"""
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		if stage_data and locked_overlay.visible == false:
			stage_selected.emit(stage_data)
